# NumLib

./: AUTHORS  COPYING  Doxyfile  README  SConstruct  configure.ac
python/: README  setup.cfg  setup.py
python/numlib/: __init__.py
python/numlib/array/: __init__.py  array.cpp  wrap_Array1D.h
python/numlib/reconstruction/: __init__.py  reconstruction.cpp
python/numlib/tensor/: __init__.py  tensor.cpp  tensor_exp.cpp
src/: Makefile.am
src/array/: Array1D.h  Array2D.h  ArrayBase.h  Makefile.am  PointerArray-inl.h  PointerArray.h  SConstruct  ShapeMismatch.h
src/base/: ArrayContainer.h  AssertError.h  DivisionByZero.h  IndexError.h  Makefile.am  NumLibError.cpp  NumLibError.h  SConstruct  ScopedTimer.h  StopWatch.h  constants.cpp  constants.h  debug_tools.h  factorial.h  io.h  nocopy.h  numlib-config.h  random.h
src/integration/: Makefile.am  QuadRule.h  Quadrature.cpp  Quadrature.h  SConstruct
src/io/: ConfigFile-imp.h  ConfigFile.cpp  ConfigFile.h  FileIOError.h  SConstruct  SyntaxError.h  TableLoader.cpp  TableLoader.h  io.h  stream_manip.h  stream_utils.cpp  stream_utils.h  string_utils.cpp  string_utils.h
src/linalg/: ExtHessMatrix-inl.h  ExtHessMatrix.h  ExtHessMatrixExpressions.h  HessMatrix-inl.h  HessMatrix.h  HessMatrixExpressions.h  Makefile.am  Matrix-inl.h  Matrix.h  MatrixExpressions.h  SConstruct  SparsePattern-inl.h  SparsePattern.h  SparseUnion-inl.h  SparseUnion.h  SparseVector-inl.h  SparseVector.h  SquareMatrix-inl.h  SquareMatrix.h  SquareMatrixExpressions.h  TriMatrix-inl.h  TriMatrix.h  TriMatrixExpressions.h  Vector-inl.h  Vector.h  VectorExpressions.h  Vector_uBLAS.h  lapack_wrapper.h  solverLU.h  solverLU_uBLAS.cpp
src/nnet/: FCRNN-imp.h  FCRNN.h  HypTan.h  Makefile.am  Neuron-imp.h  Neuron.h  RTRL-imp.h  RTRL.h  SConstruct
src/optimization/: BracketFinder.h  CostFunctionND.h  GoldenSection.h  LineRestriction.h  Makefile.am  Minimum1D.h  MinimumND.h  OptimizerBGQ.h  OptimizerCG.h  OptimizerPSO.h  Particle.h  QuadraticInterp.h  SConstruct  StretchingOperator.h  optimization_error_codes.h
src/reconstruction/: LinearPW-inl.h  LinearPW.h  LinearPWGrad-inl.h  LinearPWGrad.h  Makefile.am  RotInterp-inl.h  RotInterp.h  SConstruct  interp_utils.h
src/smartptr/: SharedPtr.h
src/solvers/: Arnoldi.h  GMRES.h  GMRESProjection.h  GalerkinProjection.h  GateauxFD-inl.h  GateauxFD.h  Krylov-inl.h  Krylov.h  KrylovSpaceAO-inl.h  KrylovSpaceAO.h  KrylovSpaceHO.h  Makefile.am  NewtonArnoldi-inl.h  NewtonArnoldi.h  NewtonGMRES.h  NewtonGMRESLB.h  NewtonKrylov-inl.h  NewtonKrylov.h  NewtonKrylovLB.h  PseudoTransientOperator-inl.h  PseudoTransientOperator.h  SConstruct
src/tensor/: EulerParameterVector.cpp  EulerParameterVector.h  FiniteRotations.cpp  FiniteRotations.h  Makefile.am  MovingReferenceFrame.cpp  MovingReferenceFrame.h  ReferenceFrame-inl.h  ReferenceFrame.h  RotVector.cpp  RotVector.h  SConstruct  TensorExpressions.cpp  TensorExpressions.h  TensorFieldBase.h  TensorFieldR0.h  TensorFieldR1.h  TensorFieldR2.h  TensorR1-inl.h  TensorR1.h  TensorR2-inl.h  TensorR2.cpp  TensorR2.h
testing/: SConstruct
testing/src/: base-test_suite.cpp
