
lib_LIBRARIES = libnumlib_base.a

library_includedir=$(includedir)/numlib/base

library_include_HEADERS = constants.h \
						  DivisionByZero.h \
						  numlib-config.h \
						  debug_tools.h \
						  NumLibError.h \
						  IndexError.h \
						  random.h \
						  io.h

libnumlib_base_a_SOURCES = constants.cpp \
						   constants.h \
						   DivisionByZero.h \
						   numlib-config.h \
						   debug_tools.h \
						   NumLibError.h \
						   IndexError.h \
						   random.h \
						   io.h
