
lib_LIBRARIES = libnumlib_linalg.a

libnumlib_linalg_a_SOURCES = Matrix_uBLAS.h   \
							 Vector_uBLAS.h   \
							 solverLU_uBLAS.h \
							 solverLU_uBLAS.cpp

library_includedir=$(includedir)/numlib/linalg

library_include_HEADERS = Matrix_uBLAS.h \
						  Vector_uBLAS.h \
						  solverLU_uBLAS.h
