
library_includedir=$(includedir)/numlib/linalg

library_include_HEADERS = Vector.h \
					      Vector-inl.h \
						  VectorExpressions.h \
						  TriMatrix.h \
						  TriMatrix-inl.h \
					      TriMatrixExpressions.h \
						  HessMatrix.h \
						  HessMatrix-inl.h \
						  HessMatrixExpressions.h