
library_includedir=$(includedir)/numlib/optimization

library_include_HEADERS = optimization_error_codes.h \
						  Minimum1D.h       \
						  MinimumND.h       \
						  CostFunctionND.h  \
						  LineRestriction.h \
						  BracketFinder.h   \
						  GoldenSection.h   \
						  QuadraticInterp.h \
						  OptimizerBGQ.h \
						  OptimizerCG.h \
						  Particle.h \
						  OptimizerPSO.h
