
library_includedir=$(includedir)/numlib/solvers

library_include_HEADERS = Arnoldi.h \
						  GalerkinProjection.h \
						  Krylov-inl.h \
						  Krylov.h \
						  KrylovSpaceAO-inl.h \
						  KrylovSpaceAO.h \
						  GateauxFD.h \
						  GateauxFD-inl.h \
						  NewtonKrylov.h \
						  NewtonKrylov-inl.h \
						  NewtonArnoldi.h \
						  NewtonArnoldi-inl.h
