
lib_LIBRARIES = libnumlib_tensor.a

libnumlib_tensor_a_SOURCES = TensorR1.h \
							 TensorR1-inl.h \
							 TensorR2.cpp \
							 TensorR2.h \
							 TensorR2-inl.h \
							 TensorExpressions.cpp \
							 TensorExpressions.h \
							 EulerParameterVector.h \
							 EulerParameterVector.cpp \
							 RotVector.cpp \
							 RotVector.h \
							 FiniteRotations.cpp \
							 FiniteRotations.h \
							 ReferenceFrame.h \
							 ReferenceFrame-inl.h \
							 MovingReferenceFrame.h \
						     MovingReferenceFrame.cpp

library_includedir=$(includedir)/numlib/tensor

library_include_HEADERS = TensorR1.h \
						  TensorR1-inl.h \
						  TensorR2.h \
						  TensorR2-inl.h \
						  TensorExpressions.h \
						  EulerParameterVector.h \
						  RotVector.h \
						  FiniteRotations.h \
						  ReferenceFrame.h \
						  ReferenceFrame-inl.h \
						  MovingReferenceFrame.h
